# CUDA-FastBEV

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configs/: fastbev_m0_r18_s256x704_v200x200x4_c192_d2_f1.py
ptq/: dump-data.py  export_onnx.py  ptq_bev.py
ptq/lean/: exptool.py  funcs.py  quantize.py  tensor.py  train.py
src/: main.cpp
src/fastbev/: fastbev.cpp  fastbev.hpp  fastbev_post.cpp  fastbev_post.hpp  fastbev_pre.cpp  fastbev_pre.hpp  normalization.cu  normalization.hpp  postprecess.cpp  postprecess.hpp  vtransform.cu  vtransform.hpp
tool/: build_trt_engine.sh  cudasm.sh  draw.py  environment.sh  run.sh
